Some Linux ports.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,10 @@ cmake_minimum_required (VERSION 2.8)
 
 project (viewback)
 
-add_subdirectory (client)
+option(BUILD_CLIENT "Build the client" ON)
+
+if (BUILD_CLIENT)
+	add_subdirectory (client)
+endif()
+
 add_subdirectory (tests)
