Managed to get the client building on GCC 4.4 also.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required (VERSION 2.8)
 
 project (viewback)
 
+if (NOT WIN32)
+	add_definitions("-std=c++0x")
+endif()
+
 option(BUILD_CLIENT "Build the client" ON)
 
 if (BUILD_CLIENT)
