Support for specifying time with either doubles or 64 bit unsigned int. Default is the int. This means support for very long running games.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,3 +14,13 @@ set (GAME_C_SOURCES
 )
 
 add_executable (game_c ${GAME_C_SOURCES})
+
+set (GAME_DOUBLE_SOURCES
+	game.cpp
+	../server/viewback.cpp
+)
+
+add_executable (game_double ${GAME_DOUBLE_SOURCES})
+
+set_target_properties (game_double PROPERTIES COMPILE_DEFINITIONS "VIEWBACK_TIME_DOUBLE")
+
