--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,14 @@ cmake_minimum_required (VERSION 2.8)
 
 project (viewback)
 
+if (MSVC)
+	add_definitions(/W4)
+endif()
+
+if (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+	add_definitions(-Wall)
+endif()
+
 if (NOT WIN32)
 	add_definitions("-std=c++0x")
 endif()
