Add a new API that makes setting up the server a bit easier at the expense of a little memory allocation.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories (
 set (GAME_CPP_SOURCES
 	game.cpp
 	../server/viewback.cpp
+	../server/viewback_util.cpp
 )
 
 add_executable (game_cpp ${GAME_CPP_SOURCES})
@@ -18,6 +19,7 @@ add_executable (game_c ${GAME_C_SOURCES})
 set (GAME_DOUBLE_SOURCES
 	game.cpp
 	../server/viewback.cpp
+	../server/viewback_util.cpp
 )
 
 add_executable (game_double ${GAME_DOUBLE_SOURCES})
