Don't use exceptions.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -23,6 +23,7 @@ set (CLIENT_TEST_SOURCES
 add_definitions(-D_SCL_SECURE_NO_WARNINGS)
 add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 add_definitions(-DPTW32_STATIC_LIB)
+add_definitions(-DPROTOBUF_USE_EXCEPTIONS=0)
 
 add_executable (client_test ${CLIENT_TEST_SOURCES})
 
